fix(intelligence): resolve FlowForecast mapper, repository method, and search method errors